--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-* {
-    padding: 0px;
-    margin: 0px;
+*{
+    /*margin: 0px;
+    padding: 0px;*/
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /*background-color: rgba(3,22,37,.9);*/
 }
 
 h1{
