--- a/style_page1.css
+++ b/style_page1.css
@@ -1,8 +1,24 @@
+*{
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body{
 	padding: 0px;
 	margin: 0px;
 	display: flex;
 	align-items: center; /* centrer les éléments horizontales */
-    /*justify-content: center; /* centrer les éléments verticalement */
+    text-align: center; /* centrer les éléments verticalement */
     flex-direction: column;
+    background: url("1.jpg");
+    background-size: cover;
+}
+
+h1{
+	color: white;
+	font-size: 50px;
+}
+
+div{
+	top: 20%;
+	position: absolute;
 }
